--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.6",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "@rive-app/react-canvas": "^4.18.2",
     "@tailwindcss/postcss": "^4.0.9",
     "gatsby": "^5.14.1",
